# scaler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  graph_client.py  pyproject.toml  run_client.py  worker_adapter_refactor.md
.github/actions/run-test/: action.yml
.github/workflows/: linter.yml
docs/source/tutorials/: configuration.rst  features.rst  scaling.rst
examples/: task_capabilities.py
scaler/client/: client.py  future.py
scaler/client/agent/: client_agent.py  future_manager.py
scaler/cluster/: cluster.py  combo.py  scheduler.py
scaler/config/: defaults.py
scaler/entry_points/: cluster.py  object_storage_server.py  scheduler.py
scaler/io/: async_object_storage_connector.py  sync_object_storage_connector.py
scaler/io/ymq/: CMakeLists.txt  bytes.h  common.h  configuration.h  epoll_context.cpp  epoll_context.h  error.h  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_manager.h  interruptive_concurrent_queue.h  io_context.cpp  io_context.h  io_socket.cpp  io_socket.h  iocp_context.cpp  iocp_context.h  logging.h  message_connection_tcp.cpp  message_connection_tcp.h  network_utils.h  readme.md  tcp_client.cpp  tcp_client.h  tcp_operations.h  tcp_server.cpp  tcp_server.h  timed_queue.h  timestamp.h  typedefs.h  utils.h  ymq.pyi  ymq_test.py
scaler/io/ymq/examples/: CMakeLists.txt  automated_echo_client.cpp  common.h  echo_client.cpp  echo_server.cpp  pub_server.cpp  remove_iosocket.cpp  sub_client.cpp  timed_queue.cpp
scaler/io/ymq/internal/: defs.h  raw_connection_tcp_fd.cpp  raw_connection_tcp_fd.h
scaler/io/ymq/pymod_ymq/: async.h  bytes.h  exception.h  io_context.h  io_socket.h  message.h  python.h  ymq.cpp  ymq.h
scaler/object_storage/: CMakeLists.txt  defs.h  object_storage_server.cpp  object_storage_server.h  pymod_object_storage_server.cpp
scaler/scheduler/: config.py  graph_manager.py  scheduler.py
scaler/scheduler/allocators/: queued.py
scaler/scheduler/controllers/: task_controller.py
scaler/scheduler/cpp/: .clang-format  CMakeLists.txt  address_monitor.h  async_binder.h  async_connector.h  client_manager.cpp  client_manager.cppm  client_manager.cppp  client_manager.h  config.h  configure.sh  context.h  graphtask_manager.cpp  graphtask_manager.cppm  graphtask_manager.cppp  graphtask_manager.h  main.cpp  note  object_manager.cpp  object_manager.cppm  object_manager.cxx  object_manager.h  queued_allocator.h  readme.md  scaler.cppm  scheduler.cpp  scheduler.cppm  scheduler.h  status_reporter.cpp  status_reporter.cppm  status_reporter.h  task_manager.cpp  task_manager.cppm  task_manager.h  worker_manager.cpp  worker_manager.cppm  worker_manager.cppp  worker_manager.h  zmq_config.h
scaler/scheduler/cpp/utility/: common.h  corotask.h  defaults.h  object_tracker.h  one_to_many_dict.h  typedefs.h
scaler/scheduler/managers/: balance_manager.py  object_manager.py  worker_manager.py
scaler/ui/: task_graph.py
scaler/worker/: worker.py
scaler/worker/agent/: processor_manager.py
scaler/worker/agent/processor/: processor.py
scaler/worker/symphony/: task_manager.py
scaler/worker_adapter/symphony/: worker.py
scripts/: build.ps1  download_install_dependencies.ps1
src/cpp/scaler/: CMakeLists.txt
src/cpp/scaler/error/: error.h
src/cpp/scaler/object_storage/: pymod_object_storage_server.cpp
src/cpp/scaler/utility/: CMakeLists.txt  many_to_many_dict.h  one_to_many_dict.h
src/cpp/scaler/utility/pymod/: compatibility.h  indexed_queue.cpp  many_to_many_dict.cpp  one_to_many_dict.cpp  one_to_many_dict.h  stable_priority_queue.cpp
src/cpp/scaler/ymq/: CMakeLists.txt  io_context.cpp  io_socket.cpp  io_socket.h  message_connection.cpp  message_connection.h  message_connection_tcp.cpp  network_utils.h  stream_client.cpp  stream_client.h  stream_server.cpp  stream_server.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/scaler/client/agent/: client_agent.py
src/scaler/cluster/: combo.py  scheduler.py
src/scaler/compat/: ray.py
src/scaler/config/section/: ecs_worker_manager.py  native_worker_adapter.py  native_worker_manager.py  scheduler.py  symphony_worker_manager.py
src/scaler/io/: utility.py  ymq_async_binder.py  ymq_async_connector.py  ymq_async_object_storage_connector.py
src/scaler/protocol/capnp/: message.capnp
src/scaler/protocol/python/: message.py
src/scaler/scheduler/: scheduler.py
src/scaler/scheduler/controllers/: balance_controller.py  information_controller.py  mixins.py  vanilla_policy_controller.py  worker_adapter_controller.py  worker_controller.py
src/scaler/ui/: v2.py  webui.py
src/scaler/worker/: worker.py
src/scaler/worker/agent/: heartbeat_manager.py  task_manager.py
src/scaler/worker_adapter/: native.py
src/scaler/worker_manager_adapter/aws_hpc/: worker.py
src/scaler/worker_manager_adapter/aws_raw/: ecs.py
src/scaler/worker_manager_adapter/baremetal/: native.py
src/scaler/worker_manager_adapter/symphony/: heartbeat_manager.py  worker.py  worker_adapter.py  worker_manager.py
tests/: CMakeLists.txt  test_balance.py  test_client.py  test_death_timeout.py  test_future.py  test_graph.py  test_nested_task.py  test_profiling.py  test_protected.py  test_serializer.py  test_ui.py
tests/cluster/: test_cluster_disconnect.py
tests/cpp/ymq/: CMakeLists.txt
tests/cpp/ymq/net/: address.cpp  address.h  socket_utils_linux.cpp  socket_utils_windows.cpp  tcp_socket.h  tcp_socket_linux.cpp  uds_socket.cpp  (+2 more)
tests/object_storage/: test_object_manager.cpp  test_object_storage_server.cpp
tests/scheduler/: test_capabilities.py  test_capability_allocate_policy.py  test_scaling.py  test_waterfall_scaling.py
tests/utility/: test_one_to_many_dict.py
(+57 files in other folders)
